# llamacpp-embed

./: CMakeLists.txt  README.md  ggml-metal.m  ggml.c  llama.cpp  llama.h  llava  rpcshell.py  test_8k_summary_prompt.txt  test_chat.py  test_health.py  test_llama3.py  test_llm_engine.py  test_tinyllama.py
common/: build-info.cpp  common.cpp  common.h  log.h
examples/server/: CMakeLists.txt  httplib.h  jsonrpcstubs.h  rpcserver.cpp  rpcserver.h  server.cpp  server_oaicompat.cpp  server_rpc.cpp  utils.hpp
examples/speculative/: basic_16k_code_summ_test.txt  prompt_attempt_spec_dec_cpp.txt  prompt_attempt_spec_dec_cpp_rev_context.txt  prompt_attempt_spec_dec_cpp_rev_followup_maintask.txt  prompt_attempt_spec_dec_cpp_shortened.md  prompt_attempt_spec_dec_cpp_shortened.txt  sys_design_0.txt
include/CL/Utils/: OpenCLUtilsCpp_Export.h  OpenCLUtils_Export.h
lib/: libOpenCL.1.2.dylib  libOpenCL.1.dylib  libOpenCL.dylib
lib/cmake/CLBlast/: CLBlastConfig-noconfig.cmake  CLBlastConfig.cmake
lib/pkgconfig/: OpenCL.pc
share/cmake/OpenCLExtensionLoader/: OpenCLExtensionLoaderTargets-release.cmake
share/cmake/OpenCLICDLoader/: OpenCLICDLoaderTargets-release.cmake
share/cmake/OpenCLUtils/: OpenCLUtilsTargets-release.cmake  OpenCLUtilsTargets.cmake
share/cmake/OpenCLUtilsCpp/: OpenCLUtilsCppConfigVersion.cmake  OpenCLUtilsCppTargets-release.cmake  OpenCLUtilsCppTargets.cmake
share/pkgconfig/: OpenCL-CLHPP.pc  OpenCL-Headers.pc
